# Regression-Analysis-Mobile-Application

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
summative/API/: main.py  prediction.py  retrain.py  schemas.py  test_prediction.py
summative/linear_regression/: multivariate.ipynb
summative/linear_regression/models/: best_model.pkl  preprocessor.pkl  scaler.pkl
summative/myapplication/: pubspec.yaml
summative/myapplication/android/app/: build.gradle.kts
summative/myapplication/ios/Runner/: Info.plist
summative/myapplication/ios/Runner.xcodeproj/: project.pbxproj
summative/myapplication/lib/: main.dart
summative/myapplication/lib/screens/: home_page.dart
summative/myapplication/lib/services/: api_service.dart
summative/myapplication/macos/Runner.xcodeproj/: project.pbxproj
summative/myapplication/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
summative/myapplication/web/: index.html
