[project]
name = "linear-regression-model"
version = "0.1.0"
description = "Student performance prediction using multivariate linear regression with FastAPI and Flutter."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.0",
    "ipykernel>=6.30.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false